--- a/View/DetailsPage.xaml
+++ b/View/DetailsPage.xaml
@@ -13,17 +13,19 @@
            BackgroundColor="DarkRed"
            HasShadow="True"
            BorderColor="Black"
-           Grid.Row="0">
+           Grid.Row="0"
+           WidthRequest="400"
+           HeightRequest="780">
             <!-- Top lights -->
             <Grid RowDefinitions="*,300,*"
-              ColumnDefinitions="*,*,*">
+                  ColumnDefinitions="*,*,*">
 
                 <Ellipse Fill="DeepSkyBlue"
                      Stroke="White"
-                     StrokeThickness="10"
-                     WidthRequest="60"
-                     HeightRequest="60"
-                     Margin="0,0,27,30"/>
+                     StrokeThickness="15"
+                     WidthRequest="80"
+                     HeightRequest="80"
+                     Margin="0,0,27,80"/>
 
                 <Ellipse HeightRequest="20"
                      WidthRequest="20"
@@ -32,7 +34,7 @@
                      Grid.Column="1"
                      Stroke="Black"
                      StrokeThickness="3"
-                     Margin="0,0,100,70"/>
+                     Margin="0,0,140,120"/>
 
                 <Ellipse HeightRequest="20"
                      WidthRequest="20"
@@ -41,7 +43,7 @@
                      Grid.Column="1"
                      Stroke="Black"
                      StrokeThickness="3"
-                     Margin="0,0,40,70"/>
+                     Margin="0,0,80,120"/>
 
                 <Ellipse HeightRequest="20"
                      WidthRequest="20"
@@ -50,18 +52,18 @@
                      Grid.Column="1"
                      Stroke="Black"
                      StrokeThickness="3"
-                     Margin="20,0,0,70"/>
+                     Margin="0,0,20,120"/>
                 <Button Grid.Column="2"
                         ImageSource="power_button.png"
                         HeightRequest="50"
                         WidthRequest="50"
                         BackgroundColor="LightGray"
-                        Margin="20,0,0,40"
+                        Margin="10,0,0,80"
                         Command="{Binding SwitchIsVisCommand}">
                 </Button>
 
-                <Frame HeightRequest="300"
-                   Margin="0,380,0,0"
+                <Frame HeightRequest="400"
+                   Margin="0,480,0,0"
                    Padding="0"
                    Grid.ColumnSpan="3"
                    BorderColor="Black">
@@ -114,16 +116,16 @@
                                        Margin="0,0,80,10"
                                        RadiusX="5"/>
                         <!-- Screen -->
-                        <Frame HeightRequest="200"
-                           WidthRequest="250"
-                           Grid.Row="1"
-                           VerticalOptions="Center"
-                           HorizontalOptions="Center"
-                           Margin="275,0,0,40"
-                           BackgroundColor="LightGray"
-                           CornerRadius="0"
-                           BorderColor="Black"
-                           Padding="1">
+                        <Frame HeightRequest="300"
+                               WidthRequest="300"
+                               Grid.Row="1"
+                               VerticalOptions="Center"
+                               HorizontalOptions="Center"
+                               Margin="330,0,0,40"
+                               BackgroundColor="LightGray"
+                               CornerRadius="0"
+                               BorderColor="Black"
+                               Padding="1">
                             <ScrollView IsVisible="{Binding IsVis}">
                                 <VerticalStackLayout>
                                     <Grid ColumnDefinitions="Auto,*,Auto,*"
@@ -185,13 +187,13 @@
                     </Grid>
                 </Frame>
                 <!-- Thumbstick -->
-                <Ellipse HeightRequest="50"
-                     WidthRequest="50"
+                <Ellipse HeightRequest="60"
+                     WidthRequest="60"
                      Fill="#FF353935"
                      Grid.Row="2"
                      Stroke="Black"
                      StrokeThickness="4"
-                     Margin="0,0,30,40"/>
+                     Margin="0,0,30,0"/>
                 <!-- DPad -->
                 <Rectangle Fill="#FF353935"
                        Grid.Column="2"
@@ -200,7 +202,7 @@
                        StrokeThickness="4"
                        WidthRequest="30"
                        HeightRequest="50"
-                       Margin="0,40,10,0"/>
+                       Margin="0,80,10,0"/>
                 <Rectangle Fill="#FF353935"
                        Grid.Column="2"
                        Grid.Row="2"
@@ -208,7 +210,7 @@
                        StrokeThickness="4"
                        WidthRequest="30"
                        HeightRequest="50"
-                       Margin="0,0,10,40"/>
+                       Margin="0,40,10,40"/>
                 <Rectangle Fill="#FF353935"
                        Grid.Column="2"
                        Grid.Row="2"
@@ -216,7 +218,7 @@
                        StrokeThickness="4"
                        WidthRequest="50"
                        HeightRequest="30"
-                       Margin="0,0,50,0"/>
+                       Margin="0,40,50,0"/>
                 <Rectangle Fill="#FF353935"
                        Grid.Column="2"
                        Grid.Row="2"
@@ -224,19 +226,19 @@
                        StrokeThickness="4"
                        WidthRequest="50"
                        HeightRequest="30"
-                       Margin="30,0,0,0"/>
+                       Margin="30,40,0,0"/>
                 <Rectangle Fill="#FF353935"
                        Grid.Column="2"
                        Grid.Row="2"
                        WidthRequest="30"
                        HeightRequest="29"
-                       Margin="0,0,10,0"/>
+                       Margin="0,40,10,0"/>
                 <Rectangle Fill="#FF353935"
                        Grid.Column="2"
                        Grid.Row="2"
                        WidthRequest="27"
                        HeightRequest="33"
-                       Margin="0,0,10,0"/>
+                       Margin="0,40,10,0"/>
                 <Ellipse Fill="#FF353935"
                      Stroke="Black"
                      StrokeThickness="4"
@@ -244,7 +246,7 @@
                      WidthRequest="25"
                      Grid.Row="2"
                      Grid.Column="2"
-                     Margin="0,0,11,0"/>
+                     Margin="0,40,11,0"/>
                 <!-- Colored Boxes ? -->
                 <Rectangle Fill="Green"
                        Stroke="Black"
@@ -253,7 +255,7 @@
                        Grid.Row="2"
                        WidthRequest="90"
                        HeightRequest="50"
-                       Margin="0,50,45,0"
+                       Margin="0,90,45,0"
                        RadiusX="5"/>
                 <Rectangle Fill="Red"
                        Stroke="Black"
@@ -262,7 +264,7 @@
                        Grid.Row="2"
                        WidthRequest="40"
                        HeightRequest="10"
-                       Margin="0,0,90,50"
+                       Margin="0,40,90,50"
                        RadiusX="5"/>
                 <Rectangle Fill="Turquoise"
                        Stroke="Black"
@@ -271,7 +273,7 @@
                        Grid.Row="2"
                        WidthRequest="40"
                        HeightRequest="10"
-                       Margin="0,0,0,50"
+                       Margin="0,40,0,50"
                        RadiusX="5"/>
             </Grid>
         </Frame>
