--- a/View/DetailsPage.xaml
+++ b/View/DetailsPage.xaml
@@ -7,52 +7,49 @@
              Shell.NavBarIsVisible="False"
              Title="DetailsPage">
     <Grid HorizontalOptions="Center"
-      VerticalOptions="Center"
-      RowDefinitions="*,Auto">
-        <Frame 
-           BackgroundColor="DarkRed"
-           HasShadow="True"
-           BorderColor="Black"
-           Grid.Row="0"
-           WidthRequest="400"
-           HeightRequest="780">
+          VerticalOptions="Center"
+          RowDefinitions="*,Auto">
+        <Frame BackgroundColor="DarkRed"
+               HasShadow="True"
+               BorderColor="Black"
+               Grid.Row="0"
+               WidthRequest="400"
+               HeightRequest="780">
             <!-- Top lights -->
             <Grid RowDefinitions="*,300,*"
                   ColumnDefinitions="*,*,*">
 
                 <Ellipse Fill="DeepSkyBlue"
-                     Stroke="White"
-                     StrokeThickness="15"
-                     WidthRequest="80"
-                     HeightRequest="80"
-                     Margin="0,0,27,80"/>
+                         Stroke="White"
+                         StrokeThickness="15"
+                         WidthRequest="80"
+                         HeightRequest="80"
+                         Margin="0,0,27,80"/>
 
                 <Ellipse HeightRequest="20"
-                     WidthRequest="20"
-                     Fill="Red"
-                     Grid.Row="0"
-                     Grid.Column="1"
-                     Stroke="Black"
-                     StrokeThickness="3"
-                     Margin="0,0,140,120"/>
-
+                         WidthRequest="20"
+                         Fill="Red"
+                         Grid.Row="0"
+                         Grid.Column="1"
+                         Stroke="Black"
+                         StrokeThickness="3"
+                         Margin="0,0,140,120"/>
                 <Ellipse HeightRequest="20"
-                     WidthRequest="20"
-                     Fill="Yellow"
-                     Grid.Row="0"
-                     Grid.Column="1"
-                     Stroke="Black"
-                     StrokeThickness="3"
-                     Margin="0,0,80,120"/>
-
+                         WidthRequest="20"
+                         Fill="Yellow"
+                         Grid.Row="0"
+                         Grid.Column="1"
+                         Stroke="Black"
+                         StrokeThickness="3"
+                         Margin="0,0,80,120"/>
                 <Ellipse HeightRequest="20"
-                     WidthRequest="20"
-                     Fill="Green"
-                     Grid.Row="0"
-                     Grid.Column="1"
-                     Stroke="Black"
-                     StrokeThickness="3"
-                     Margin="0,0,20,120"/>
+                         WidthRequest="20"
+                         Fill="Green"
+                         Grid.Row="0"
+                         Grid.Column="1"
+                         Stroke="Black"
+                         StrokeThickness="3"
+                         Margin="0,0,20,120"/>
                 <Button Grid.Column="2"
                         ImageSource="power_button.png"
                         HeightRequest="50"
@@ -63,58 +60,58 @@
                 </Button>
 
                 <Frame HeightRequest="400"
-                   Margin="0,480,0,0"
-                   Padding="0"
-                   Grid.ColumnSpan="3"
-                   BorderColor="Black">
+                       Margin="0,480,0,0"
+                       Padding="0"
+                       Grid.ColumnSpan="3"
+                       BorderColor="Black">
                     <!-- Screen Frame -->
                     <Grid ColumnDefinitions="30,*,30"
-                      RowDefinitions="30,*,30">
+                          RowDefinitions="30,*,30">
 
                         <Ellipse HeightRequest="30"
-                                     WidthRequest="30"
-                                     Fill="Red"
-                                     Grid.Row="2"
-                                     Stroke="Black"
-                                     StrokeThickness="5"
-                                     Margin="40,0,0,40"/>
+                                 WidthRequest="30"
+                                 Fill="Red"
+                                 Grid.Row="2"
+                                 Stroke="Black"
+                                 StrokeThickness="5"
+                                 Margin="40,0,0,40"/>
                         <!-- Black stacked lines -->
                         <Rectangle Fill="Black"
-                                       Stroke="Black"
-                                       StrokeThickness="4"
-                                       Grid.Column="2"
-                                       Grid.Row="2"
-                                       WidthRequest="70"
-                                       HeightRequest="3"
-                                       Margin="0,0,80,70"
-                                       RadiusX="5"/>
+                                   Stroke="Black"
+                                   StrokeThickness="4"
+                                   Grid.Column="2"
+                                   Grid.Row="2"
+                                   WidthRequest="70"
+                                   HeightRequest="3"
+                                   Margin="0,0,80,70"
+                                   RadiusX="5"/>
                         <Rectangle Fill="Black"
-                                       Stroke="Black"
-                                       StrokeThickness="4"
-                                       Grid.Column="2"
-                                       Grid.Row="2"
-                                       WidthRequest="70"
-                                       HeightRequest="3"
-                                       Margin="0,0,80,50"
-                                       RadiusX="5"/>
+                                   Stroke="Black"
+                                   StrokeThickness="4"
+                                   Grid.Column="2"
+                                   Grid.Row="2"
+                                   WidthRequest="70"
+                                   HeightRequest="3"
+                                   Margin="0,0,80,50"
+                                   RadiusX="5"/>
                         <Rectangle Fill="Black"
-                                       Stroke="Black"
-                                       StrokeThickness="4"
-                                       Grid.Column="2"
-                                       Grid.Row="2"
-                                       WidthRequest="70"
-                                       HeightRequest="3"
-                                       Margin="0,0,80,30"
-                                       RadiusX="5"/>
+                                   Stroke="Black"
+                                   StrokeThickness="4"
+                                   Grid.Column="2"
+                                   Grid.Row="2"
+                                   WidthRequest="70"
+                                   HeightRequest="3"
+                                   Margin="0,0,80,30"
+                                   RadiusX="5"/>
                         <Rectangle Fill="Black"
-                                       Stroke="Black"
-                                       StrokeThickness="4"
-                                       Grid.Column="2"
-                                       Grid.Row="2"
-                                       WidthRequest="70"
-                                       HeightRequest="3"
-                                       Margin="0,0,80,10"
-                                       RadiusX="5"/>
+                                   Stroke="Black"
+                                   StrokeThickness="4"
+                                   Grid.Column="2"
+                                   Grid.Row="2"
+                                   WidthRequest="70"
+                                   HeightRequest="3"
+                                   Margin="0,0,80,10"
+                                   RadiusX="5"/>
                         <!-- Screen -->
                         <Frame HeightRequest="300"
                                WidthRequest="300"
@@ -148,28 +145,36 @@
                                                Grid.ColumnSpan="4"
                                                HorizontalOptions="Center"
                                                FontSize="20"
-                                               Margin="0,0,0,5"/>
+                                               Margin="0,0,0,10"
+                                               FontAttributes="Bold"/>
                                         <Label Text="Height:"
                                                Grid.Column="0"
                                                Grid.Row="2"
                                                Margin="3,0,0,0"
-                                               HorizontalOptions="Start"/>
+                                               HorizontalOptions="Start"
+                                               FontSize="Body"/>
                                         <Label Text="{Binding Pokemon.Height}"
                                                Grid.Column="1"
                                                Grid.Row="2"
-                                               HorizontalOptions="Center"/>
+                                               HorizontalOptions="Center"
+                                               FontSize="Body"
+                                               FontAttributes="Bold"/>
                                         <Label Text="Weight:"
                                                Grid.Column="2"
                                                Grid.Row="2"
-                                               HorizontalOptions="End"/>
+                                               HorizontalOptions="End"
+                                               FontSize="Body"/>
                                         <Label Text="{Binding Pokemon.Weight}"
                                                Grid.Column="3"
                                                Grid.Row="2"
-                                               HorizontalOptions="Center"/>
+                                               HorizontalOptions="Center"
+                                               FontSize="Body"
+                                               FontAttributes="Bold"/>
                                         <Label Text="{Binding Pokemon.Description}"
                                                Grid.ColumnSpan="4"
                                                Grid.Row="3"
-                                               Margin="3,10,0,0"/>
+                                               Margin="3,10,0,0"
+                                               FontSize="Body"/>
 
                                         <Button ImageSource="back_button.png"
                                                 HeightRequest="40"
@@ -188,93 +193,93 @@
                 </Frame>
                 <!-- Thumbstick -->
                 <Ellipse HeightRequest="60"
-                     WidthRequest="60"
-                     Fill="#FF353935"
-                     Grid.Row="2"
-                     Stroke="Black"
-                     StrokeThickness="4"
-                     Margin="0,0,30,0"/>
+                         WidthRequest="60"
+                         Fill="#FF353935"
+                         Grid.Row="2"
+                         Stroke="Black"
+                         StrokeThickness="4"
+                         Margin="0,0,30,0"/>
                 <!-- DPad -->
                 <Rectangle Fill="#FF353935"
-                       Grid.Column="2"
-                       Grid.Row="2"
-                       Stroke="Black"
-                       StrokeThickness="4"
-                       WidthRequest="30"
-                       HeightRequest="50"
-                       Margin="0,80,10,0"/>
+                           Grid.Column="2"
+                           Grid.Row="2"
+                           Stroke="Black"
+                           StrokeThickness="4"
+                           WidthRequest="30"
+                           HeightRequest="50"
+                           Margin="0,80,10,0"/>
                 <Rectangle Fill="#FF353935"
-                       Grid.Column="2"
-                       Grid.Row="2"
-                       Stroke="Black"
-                       StrokeThickness="4"
-                       WidthRequest="30"
-                       HeightRequest="50"
-                       Margin="0,40,10,40"/>
+                           Grid.Column="2"
+                           Grid.Row="2"
+                           Stroke="Black"
+                           StrokeThickness="4"
+                           WidthRequest="30"
+                           HeightRequest="50"
+                           Margin="0,40,10,40"/>
                 <Rectangle Fill="#FF353935"
-                       Grid.Column="2"
-                       Grid.Row="2"
-                       Stroke="Black"
-                       StrokeThickness="4"
-                       WidthRequest="50"
-                       HeightRequest="30"
-                       Margin="0,40,50,0"/>
+                           Grid.Column="2"
+                           Grid.Row="2"
+                           Stroke="Black"
+                           StrokeThickness="4"
+                           WidthRequest="50"
+                           HeightRequest="30"
+                           Margin="0,40,50,0"/>
                 <Rectangle Fill="#FF353935"
-                       Grid.Column="2"
-                       Grid.Row="2"
-                       Stroke="Black"
-                       StrokeThickness="4"
-                       WidthRequest="50"
-                       HeightRequest="30"
-                       Margin="30,40,0,0"/>
+                           Grid.Column="2"
+                           Grid.Row="2"
+                           Stroke="Black"
+                           StrokeThickness="4"
+                           WidthRequest="50"
+                           HeightRequest="30"
+                           Margin="30,40,0,0"/>
                 <Rectangle Fill="#FF353935"
-                       Grid.Column="2"
-                       Grid.Row="2"
-                       WidthRequest="30"
-                       HeightRequest="29"
-                       Margin="0,40,10,0"/>
+                           Grid.Column="2"
+                           Grid.Row="2"
+                           WidthRequest="30"
+                           HeightRequest="29"
+                           Margin="0,40,10,0"/>
                 <Rectangle Fill="#FF353935"
-                       Grid.Column="2"
-                       Grid.Row="2"
-                       WidthRequest="27"
-                       HeightRequest="33"
-                       Margin="0,40,10,0"/>
+                           Grid.Column="2"
+                           Grid.Row="2"
+                           WidthRequest="27"
+                           HeightRequest="33"
+                           Margin="0,40,10,0"/>
                 <Ellipse Fill="#FF353935"
-                     Stroke="Black"
-                     StrokeThickness="4"
-                     HeightRequest="25"
-                     WidthRequest="25"
-                     Grid.Row="2"
-                     Grid.Column="2"
-                     Margin="0,40,11,0"/>
+                         Stroke="Black"
+                         StrokeThickness="4"
+                         HeightRequest="25"
+                         WidthRequest="25"
+                         Grid.Row="2"
+                         Grid.Column="2"
+                         Margin="0,40,11,0"/>
                 <!-- Colored Boxes ? -->
                 <Rectangle Fill="Green"
-                       Stroke="Black"
-                       StrokeThickness="4"
-                       Grid.Column="1"
-                       Grid.Row="2"
-                       WidthRequest="90"
-                       HeightRequest="50"
-                       Margin="0,90,45,0"
-                       RadiusX="5"/>
+                           Stroke="Black"
+                           StrokeThickness="4"
+                           Grid.Column="1"
+                           Grid.Row="2"
+                           WidthRequest="90"
+                           HeightRequest="50"
+                           Margin="0,90,45,0"
+                           RadiusX="5"/>
                 <Rectangle Fill="Red"
-                       Stroke="Black"
-                       StrokeThickness="4"
-                       Grid.Column="1"
-                       Grid.Row="2"
-                       WidthRequest="40"
-                       HeightRequest="10"
-                       Margin="0,40,90,50"
-                       RadiusX="5"/>
+                           Stroke="Black"
+                           StrokeThickness="4"
+                           Grid.Column="1"
+                           Grid.Row="2"
+                           WidthRequest="40"
+                           HeightRequest="10"
+                           Margin="0,40,90,50"
+                           RadiusX="5"/>
                 <Rectangle Fill="Turquoise"
-                       Stroke="Black"
-                       StrokeThickness="4"
-                       Grid.Column="1"
-                       Grid.Row="2"
-                       WidthRequest="40"
-                       HeightRequest="10"
-                       Margin="0,40,0,50"
-                       RadiusX="5"/>
+                           Stroke="Black"
+                           StrokeThickness="4"
+                           Grid.Column="1"
+                           Grid.Row="2"
+                           WidthRequest="40"
+                           HeightRequest="10"
+                           Margin="0,40,0,50"
+                           RadiusX="5"/>
             </Grid>
         </Frame>
     </Grid>
