--- a/View/MainPage.xaml
+++ b/View/MainPage.xaml
@@ -10,8 +10,7 @@
 
     <Grid HorizontalOptions="Center"
           VerticalOptions="Center">
-        <Frame 
-               BackgroundColor="DarkRed"
+        <Frame BackgroundColor="DarkRed"
                HasShadow="True"
                BorderColor="Black"
                Grid.Row="0"
@@ -83,41 +82,41 @@
                                  Margin="40,0,0,40"/>
                         <!-- Black stacked lines -->
                         <Rectangle Fill="Black"
-                                           Stroke="Black"
-                                           StrokeThickness="4"
-                                           Grid.Column="2"
-                                           Grid.Row="2"
-                                           WidthRequest="70"
-                                           HeightRequest="3"
-                                           Margin="0,0,80,70"
-                                           RadiusX="5"/>
+                                   Stroke="Black"
+                                   StrokeThickness="4"
+                                   Grid.Column="2"
+                                   Grid.Row="2"
+                                   WidthRequest="70"
+                                   HeightRequest="3"
+                                   Margin="0,0,80,70"
+                                   RadiusX="5"/>
                         <Rectangle Fill="Black"
-                                           Stroke="Black"
-                                           StrokeThickness="4"
-                                           Grid.Column="2"
-                                           Grid.Row="2"
-                                           WidthRequest="70"
-                                           HeightRequest="3"
-                                           Margin="0,0,80,50"
-                                           RadiusX="5"/>
+                                   Stroke="Black"
+                                   StrokeThickness="4"
+                                   Grid.Column="2"
+                                   Grid.Row="2"
+                                   WidthRequest="70"
+                                   HeightRequest="3"
+                                   Margin="0,0,80,50"
+                                   RadiusX="5"/>
                         <Rectangle Fill="Black"
-                                           Stroke="Black"
-                                           StrokeThickness="4"
-                                           Grid.Column="2"
-                                           Grid.Row="2"
-                                           WidthRequest="70"
-                                           HeightRequest="3"
-                                           Margin="0,0,80,30"
-                                           RadiusX="5"/>
+                                   Stroke="Black"
+                                   StrokeThickness="4"
+                                   Grid.Column="2"
+                                   Grid.Row="2"
+                                   WidthRequest="70"
+                                   HeightRequest="3"
+                                   Margin="0,0,80,30"
+                                   RadiusX="5"/>
                         <Rectangle Fill="Black"
-                                           Stroke="Black"
-                                           StrokeThickness="4"
-                                           Grid.Column="2"
-                                           Grid.Row="2"
-                                           WidthRequest="70"
-                                           HeightRequest="3"
-                                           Margin="0,0,80,10"
-                                           RadiusX="5"/>
+                                   Stroke="Black"
+                                   StrokeThickness="4"
+                                   Grid.Column="2"
+                                   Grid.Row="2"
+                                   WidthRequest="70"
+                                   HeightRequest="3"
+                                   Margin="0,0,80,10"
+                                   RadiusX="5"/>
                         <!-- Screen -->
                         <Frame HeightRequest="300"
                                WidthRequest="300"
